--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
     "db:push": "drizzle-kit push --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.4",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
+    "keycloak-js": "^26.0.7",
+    "lucide-react": "^0.469.0",
     "next": "15.1.2",
+    "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.4.1",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
