--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
+    "next-safe-action": "^7.10.4",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
