--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
+    "framer-motion": "^12.4.7",
     "keycloak-js": "^26.1.0",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
