--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "bcryptjs": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
     "framer-motion": "^12.4.7",
+    "input-otp": "^1.4.2",
     "keycloak-js": "^26.1.0",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
@@ -55,6 +57,7 @@
     "eslint": "^9.18.0",
     "eslint-config-next": "15.1.5",
     "postcss": "^8.5.1",
+    "prettier": "^3.5.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
